// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmailTemplate should match snapshot with flowError=closed 1`] = `
<div>
  <section
    aria-busy="false"
    class="container"
  >
    <h1
      class="heading"
    >
      Email Address Attestation
    </h1>
    <div
      class="explainerContainer"
    >
      <button
        aria-label="Toggle explanation"
        class="showExplainer"
        type="button"
      />
    </div>
    <section
      class="container"
    >
      <div
        class="spinner"
      />
      <h2
        class="heading"
      >
        Attestation process:
      </h2>
      <p
        class="message"
      >
        Email sent
      </p>
      <p>
        Email sent to . Please check your inbox and spam folder and click the link.
      </p>
    </section>
    <a
      class="link"
      href="/"
    >
      Back to list
    </a>
  </section>
</div>
`;

exports[`EmailTemplate should match snapshot with flowError=unknown 1`] = `
<div>
  <section
    aria-busy="false"
    class="container"
  >
    <h1
      class="heading"
    >
      Email Address Attestation
    </h1>
    <div
      class="explainerContainer"
    >
      <button
        aria-label="Toggle explanation"
        class="showExplainer"
        type="button"
      />
    </div>
    <section
      class="container"
    >
      <div
        class="exclamation"
      />
      <h2
        class="heading"
      >
        Attestation error:
      </h2>
      <p
        class="message"
      >
        Something went wrong!
      </p>
      <p>
        Click “Try Again” or reload the page or restart your browser.
      </p>
    </section>
    <button
      class="ctaButton"
      type="button"
    >
      Try again
    </button>
    <a
      class="link"
      href="/"
    >
      Back to list
    </a>
  </section>
</div>
`;

exports[`EmailTemplate should match snapshot with status=attesting 1`] = `
<div>
  <section
    aria-busy="false"
    class="container"
  >
    <h1
      class="heading"
    >
      Email Address Attestation
    </h1>
    <div
      class="explainerContainer"
    >
      <button
        aria-label="Toggle explanation"
        class="showExplainer"
        type="button"
      />
    </div>
    <section
      class="container"
    >
      <div
        class="spinner"
      />
      <h2
        class="heading"
      >
        Attestation process:
      </h2>
      <p
        class="message"
      >
        Anchoring credential on KILT blockchain
      </p>
      <p>
        Please leave this tab open until your credential is attested.
      </p>
    </section>
    <a
      class="link"
      href="/"
    >
      Back to list
    </a>
  </section>
</div>
`;

exports[`EmailTemplate should match snapshot with status=none 1`] = `
<div>
  <section
    aria-busy="false"
    class="container"
  >
    <h1
      class="heading"
    >
      Email Address Attestation
    </h1>
    <div
      class="explainerContainer"
    >
      <button
        aria-label="Toggle explanation"
        class="showExplainer"
        type="button"
      />
    </div>
    <form>
      <label>
        Your email address
        <input
          class="formInput"
          maxlength="100"
          name="email"
          required=""
          type="email"
          value=""
        />
      </label>
      <output
        class="inputError"
        hidden=""
      />
      <p>
        Validity: one year (
        1/3/2023
        )
      </p>
      <button
        class="ctaButton"
        disabled=""
        type="submit"
      >
        Continue in wallet
      </button>
    </form>
    <a
      class="link"
      href="/"
    >
      Back to list
    </a>
  </section>
</div>
`;

exports[`EmailTemplate should match snapshot with status=ready 1`] = `
<div>
  <section
    aria-busy="false"
    class="container"
  >
    <h1
      class="heading"
    >
      Email Address Attestation
    </h1>
    <div
      class="explainerContainer"
    >
      <button
        aria-label="Toggle explanation"
        class="showExplainer"
        type="button"
      />
    </div>
    <section
      class="container"
    >
      <div
        class="checkmark"
      />
      <h2
        class="heading"
      >
        Attestation process:
      </h2>
      <p
        class="message"
      >
        Credential is ready
      </p>
      <p>
        We recommend that you back up your credential now.
      </p>
    </section>
    <button
      class="ctaButton"
      type="button"
    >
      Show credential in wallet
    </button>
    <a
      class="link"
      href="/"
    >
      Back to list
    </a>
  </section>
</div>
`;

exports[`EmailTemplate should match snapshot with status=requested 1`] = `
<div>
  <section
    aria-busy="true"
    class="container processing"
  >
    <div
      class="spinner"
    />
    <h1
      class="heading"
    >
      Email Address Attestation
    </h1>
    <div
      class="explainerContainer"
    >
      <button
        aria-label="Toggle explanation"
        class="showExplainer"
        type="button"
      />
    </div>
    <section
      class="container"
    >
      <div
        class="spinner"
      />
      <h2
        class="heading"
      >
        Attestation process:
      </h2>
      <p
        class="message"
      >
        Email sent
      </p>
      <p>
        Email sent to . Please check your inbox and spam folder and click the link.
      </p>
    </section>
    <a
      class="link"
      href="/"
    >
      Back to list
    </a>
  </section>
</div>
`;
